-
Bug
-
Resolution: Done
-
P1: Critical
-
5.10.0
-
None
-
-
f0b8d90402a0ec27b465dbcfa626f5176e167ece
On macOS with Qt 5.10.0, a QMessage dialog always displays the green zoom button - even if you explicitly tells it not to display such button. For modal alerts this is a really bad user experience as it makes no sense to zoom a small alert to take the full screen. Attached is a sample project 'QMessageBoxBug' to reproduce the issue.
When compiling the sources with Qt 5.9.3, you will see such an alert on macOS 10.13.2:

If you compile the source code with Qt 5.10.0, you will see an alert with the green zoom button:

The complete project source code is attached QMessageBoxBug.zip
and the bug can be reproduced with 5 lines of code:
QMessageBox* messageBox = new QMessageBox("My App", "Text", QMessageBox::Question, QMessageBox::Yes | QMessageBox::Default, QMessageBox::NoButton, QMessageBox::NoButton);
messageBox->setInformativeText("Informative text");
messageBox->setButtonText(QMessageBox::Yes, "OK");
messageBox->setWindowFlags(Qt::Dialog | Qt::CustomizeWindowHint | Qt::WindowTitleHint);
messageBox->exec();
Steps de reproduce:
- Download the attached QMessageBoxBug project or copy the 5 lines of code in any project
- Compile on macOS 10.13.2 using Qt 5.10.0
- Run the application
Result: The QMessageBox alert has a green zoom button.
Expected result: The QMessageBox alert should not have a green zoom button
Notes:
- This issue is not reproducible with Qt 5.9.3
- So far I did not find any workaround
- Also note that the close and minimize button are disabled but visible with Qt 5.10.0. With Qt 5.9.3 they don't appear at all as expected.
- resulted in
-
QTBUG-67181 [Reg 5.10.0->5.10.1] Dialogs are no longer resizable
-
- Closed
-